syntax = "proto3";

package api.user.v1;

option go_package = "kratos-example/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc GetUserList (GetUserListRequest) returns (GetUserListReply);
  rpc GetUserByName (GetUserByNameRequest) returns (GetUserReply);
  rpc CreateUser (CreateUserRequest) returns (GetUserReply);
  rpc DeleteUser (DeleteRequest) returns (DeleteUserReply);
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordReply);
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserReply {
  uint64 id = 1;
  string name = 2;
  string phone = 3;
  int32 gold = 4;
  int32 created_at = 5;
}

message GetUserListRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message GetUserListReply {
  repeated GetUserReply list = 1;
  int64 total = 2;
}

message GetUserByNameRequest {
  string name = 1;
  string password = 2;
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
  string phone = 3;
}

message DeleteRequest {
  uint64 id = 1;
}

message DeleteUserReply {
  bool bool = 1;
}

message ChangePasswordRequest {
  uint64 id = 1;
  string password = 2;
  string new_password = 3;
}

message ChangePasswordReply {
  bool bool = 1;
}